wikijs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
spec:
  type: LoadBalancer
  selector:
    app: wikijs
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30000
