Wikijs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "True"
    kubernetes.io/ingress.class: nginx
    nginx.org/proxy-read-timeout: 300s 
  name: a8cluster-internal-ingress
spec:
  rules:
  - host: docs.apiplus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wikijs
            port:
              number: 80
  tls:
  - hosts:
    - docs.apiplus.com
    secretName: apiplus-cert-secret
