dashboard-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/gateway
  http:
  - match: 
    - uri:
        prefix: /
    route:
    - destination:
        host: kiali
        port:
          number: 20001
